--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p class="answer">-coins!</p>
     <button id="sixth-submit">Submit</button>
     <br><br>
-    <img src="images/hint6.jpg" id="sixth-picture">
+    <img src="images/hint6.jpg" alt="hint" id="sixth-picture">
     <button id="sixth-hint">Hint</button>
     <br>
     <p class="text">Note: Please use lowercase letters and check your spelling.</p>
