Changed note text colour

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="images/hint6.jpg" alt="hint" id="sixth-picture">
     <button id="sixth-hint">Hint</button>
     <br>
-    <p class="text">Note: Please use lowercase letters and check your spelling.</p>
+    <p class="light-text">Note: Please use lowercase letters and check your spelling.</p>
     <br><br>
     <div class="centre">
     <p id="sixth-outcome"></p>
